# scotty-examples

./: README.md
ajax-with-json-example/: Main.hs  Main.js  ajax-with-json-example.cabal  create-db.sql
auth-example/: BasicAuth.hs  Handler.hs  Main.hs  Template.hs  auth-example.cabal  create-db.sql
base-example/: Main.hs  base-example.cabal  create-db.sql
file-storage-example/: Main.hs  file-storage-example.cabal
