name:                base-example
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable base-example
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, scotty, blaze-html, mysql-simple, transformers, text, blaze-markup
  -- hs-source-dirs:      
  default-language:    Haskell2010
